tests/date/date.exp
Error ------------------------------------------------------------- date.js:2:16

Cannot assign `d.getTime()` to `x` because number is incompatible with string.

Error: date.js:2
  2: var x:string = d.getTime();
                    ^^^^^^^^^^^ Cannot assign `d.getTime()` to `x` because number [1] is incompatible with string [2].
  References:
  378:     getTime(): number;
                      ^^^^^^ [1]: number. See lib: <BUILTINS>/core.js:378
    2: var x:string = d.getTime();
             ^^^^^^ [2]: string

Error: date.js:18
 18: new Date({});
     ^^^^^^^^^^^^ new `Date`. Function cannot be called on any member of intersection type
 18: new Date({});
         ^^^^ intersection
  Member 2:
  367:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:367
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  367:     constructor(timestamp: number): void;
                                  ^^^^^^ number. See lib: <BUILTINS>/core.js:367
  Member 3:
  368:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:368
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  368:     constructor(dateString: string): void;
                                   ^^^^^^ string. See lib: <BUILTINS>/core.js:368
  Member 4:
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:369
  Error:
   18: new Date({});
                ^^ object literal. This type is incompatible with the expected param type of
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                             ^^^^^^ number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:19:16

Cannot call `Date` with `'6'` bound to `month` because string is incompatible
with number.

Error: date.js:19
 19: new Date(2015, '6');
                    ^^^ Cannot call `Date` with `'6'` bound to `month` because string [1] is incompatible with number [2].
  References:
   19: new Date(2015, '6');
                      ^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                            ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:20:19

Cannot call `Date` with `'18'` bound to `day` because string is incompatible
with number.

Error: date.js:20
 20: new Date(2015, 6, '18');
                       ^^^^ Cannot call `Date` with `'18'` bound to `day` because string [1] is incompatible with number [2].
  References:
   20: new Date(2015, 6, '18');
                         ^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                          ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:21:23

Cannot call `Date` with `'11'` bound to `hour` because string is incompatible
with number.

Error: date.js:21
 21: new Date(2015, 6, 18, '11');
                           ^^^^ Cannot call `Date` with `'11'` bound to `hour` because string [1] is incompatible with number [2].
  References:
   21: new Date(2015, 6, 18, '11');
                             ^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                         ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:22:27

Cannot call `Date` with `'55'` bound to `minute` because string is incompatible
with number.

Error: date.js:22
 22: new Date(2015, 6, 18, 11, '55');
                               ^^^^ Cannot call `Date` with `'55'` bound to `minute` because string [1] is incompatible with number [2].
  References:
   22: new Date(2015, 6, 18, 11, '55');
                                 ^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                          ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:23:31

Cannot call `Date` with `'42'` bound to `second` because string is incompatible
with number.

Error: date.js:23
 23: new Date(2015, 6, 18, 11, 55, '42');
                                   ^^^^ Cannot call `Date` with `'42'` bound to `second` because string [1] is incompatible with number [2].
  References:
   23: new Date(2015, 6, 18, 11, 55, '42');
                                     ^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                           ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:24:35

Cannot call `Date` with `'999'` bound to `millisecond` because string is
incompatible with number.

Error: date.js:24
 24: new Date(2015, 6, 18, 11, 55, 42, '999');
                                       ^^^^^ Cannot call `Date` with `'999'` bound to `millisecond` because string [1] is incompatible with number [2].
  References:
   24: new Date(2015, 6, 18, 11, 55, 42, '999');
                                         ^^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                                                 ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369

Error: date.js:25
 25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ new `Date`. Function cannot be called on any member of intersection type
 25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
         ^^^^ intersection
  Member 1:
  366:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:366
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                ^^^^ unused function argument. No arguments are expected by
  366:     constructor(): void;
           ^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:366
  Member 2:
  367:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:367
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                      ^ unused function argument. No more than 1 argument is expected by
  367:     constructor(timestamp: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:367
  Member 3:
  368:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:368
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                      ^ unused function argument. No more than 1 argument is expected by
  368:     constructor(dateString: string): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:368
  Member 4:
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:369
  Error:
   25: new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
                                              ^^^^^^^^ unused function argument. No more than 7 arguments are expected by
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/core.js:369

Error ------------------------------------------------------------ date.js:26:10

Cannot call `Date` with `'2015'` bound to `year` because string is incompatible
with number.

Error: date.js:26
 26: new Date('2015', 6);
              ^^^^^^ Cannot call `Date` with `'2015'` bound to `year` because string [1] is incompatible with number [2].
  References:
   26: new Date('2015', 6);
                ^^^^^^ [1]: string
  369:     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                             ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:369


Found 10 errors
